# penumbra

./: README.md  flake.nix
.github/workflows/: documentation.yml  review.yml
core/: Cargo.toml
core/src/: device.rs  error.rs  lib.rs  macros.rs
core/src/connection/: macros.rs  mod.rs  port.rs
core/src/connection/backend/: libusb_backend.rs  mod.rs  serial_backend.rs  usb_backend.rs
core/src/core/: bootctrl.rs  devinfo.rs  emi.rs  log_buffer.rs  mod.rs  seccfg.rs
core/src/core/auth/: keys.rs  local_keyring.rs  mod.rs  sla.rs
core/src/core/crypto/: config.rs  mod.rs  sej.rs
core/src/core/storage/: emmc.rs  gpt.rs  mod.rs  ufs.rs
core/src/da/: dafile.rs  mod.rs  protocol.rs
core/src/da/xflash/: cmds.rs  da_protocol.rs  exts.rs  flash.rs  macros.rs  mod.rs  patch.rs  sec.rs  storage.rs  xflash_lib.rs
core/src/da/xml/: cmds.rs  da_protocol.rs  exts.rs  flash.rs  macros.rs  mod.rs  patch.rs  sec.rs  storage.rs  xml_lib.rs
core/src/exploit/: carbonara.rs  heapbait.rs  kamakiri.rs  mod.rs
core/src/utilities/: arm.rs  arm64.rs  hash.rs  mod.rs  patching.rs  rsa.rs  xml.rs
docs/content/: index.md
tui/: Cargo.toml
tui/res/arch/: PKGBUILD  antumbra-git.install
tui/src/: app.rs  error.rs  logger.rs  macros.rs  main.rs
tui/src/cli/: common.rs  macros.rs  mod.rs  state.rs
tui/src/cli/commands/: download.rs  (+15 more)
tui/src/components/: blinking_stars.rs  card_view.rs  description_menu.rs  dialog.rs  file_explorer.rs  progress_bar.rs  selectable_list.rs
tui/src/pages/: device.rs  mod.rs  welcome.rs
tui/src/themes/: gruvbox.rs  mod.rs  rose_pine.rs
(+4 files in other folders)
