[package]
name = "penumbra"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://shomy.is-a.dev/penumbra"
description = """
A library for interacting with MediaTek based devices,
for flashing firmware, readback, bootloader unlocking, and more.
"""
keywords = ["MediaTek", "flashing", "bootloader", "android"]

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
cipher = "0.4.4"
crc32fast = "1.5.0"
downcast-rs = "2.0.2"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
md5 = "0.8.0"
num-bigint = "0.4.6"
num_enum = "0.7.4"
nusb = { version = "0.2.1", optional = true }
rand = "0.9.2"
rusb = { version = "0.9.4", optional = true}
serialport = { version = "4.7.3", optional = true }
sha1 = "0.10.6"
sha2 = "0.10.9"
simple-xml = "0.1.10"
thiserror = "2.0.17"
wincode = { version = "0.5.1", features = ["derive"] }
xmlcmd-derive = { path = "xmlcmd_derive" }

[features]
default = ["nusb"]
libusb = ["rusb"]
serial = ["serialport",]
libusb-exp = []
no_localslakeyring = []
no_exploits = []
